--- a/ex3/index.html
+++ b/ex3/index.html
@@ -6,7 +6,7 @@
 	<!-- 어도비 본명조 -->
 	<script src="https://use.typekit.net/fdv0sur.js"></script>
 	<style>
-	
+		h1,h2,h3,p { font-family: "source-han-serif-korean",serif; font-weight:400}
 		.wrap{ width:1920px; margin:auto; position: relative}
 		.beige{ background: #efede1 }
 
