--- a/ex4/index.html
+++ b/ex4/index.html
@@ -16,8 +16,10 @@
 		#back4{ background: url('./img/back4.jpg'); background-size:100% auto; height:3022px;}
 		#back5{ background: url('./img/back5.jpg'); background-size:100% auto; height:1917px;}
 		#back6{ background: url('./img/back6.jpg'); background-size:100% auto; height:397px;}
-
-
+		
+		/*본문 및 제목 태그에 폰트 적용(폰트사이트에서 긁어다 붙임) */
+		h1,h2,h3,p { font-family: "source-han-serif-korean",serif; font-weight:400}
+		
 		/*아래 여러가지 속성들 중에서 반복적으로 사용되는 속성은 따로 뺍니다*/
 		h3{ font-size:2em; position: absolute; line-height: 1.58; text-decoration: underline; font-weight: bold}
 		p{ font-size:2em; position: absolute; line-height: 1.58; }
