--- a/ex3/index.html
+++ b/ex3/index.html
@@ -20,6 +20,9 @@
 
 		/*header*/
 
+		/*본문 및 제목 태그에 폰트 적용(폰트사이트에서 긁어다 붙임) */
+		h1,h2,h3,p { font-family: "source-han-serif-korean",serif; font-weight:400}
+		
 		/*가장 빈번하게 사용되는 소제목 h3와 p를 맞추어봅시다.*/
 		header p{ font-size:2em; position:absolute; top:1490px;left:715px; line-height: 1.58}
 		header h3{font-size:2em; position: absolute; top:1440px;left:715px; line-height: 1.58; text-decoration: underline; font-weight: bold;}
